# anisoscope

./: README.md  pyproject.toml  start_anisoscope.bat
anisoscope/: __init__.py  __main__.py
crystal_elastic_workbench/: __init__.py  exporting.py  gui.py
tests/: test_gui_import_order.py  test_gui_smoke.py  test_readme.py  test_sampling_export.py
