[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anisoscope"
version = "0.1.0"
description = "AnisoScope: GUI and numerical toolkit for crystal elastic anisotropy analysis from Cij."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "pyvista>=0.43",
    "vtk>=9.2",
    "PySide6>=6.6",
    "imageio>=2.31",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
anisoscope = "crystal_elastic_workbench.gui:main"
crystal-elastic-workbench = "crystal_elastic_workbench.gui:main"

[tool.setuptools.packages.find]
include = ["anisoscope*", "crystal_elastic_workbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
